# Artbabo

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build_frontend.sh  deploy_commands.sh  todo.md
.devcontainer/: Dockerfile  devcontainer.json
backend/: .env.example  Cargo.toml
backend/src/: backend_responses.rs  main.rs
backend/website_src/: index.html
docs/: error.html  index.html  mygame.js
event_work_server/: Cargo.toml  README.md
event_work_server/src/: lib.rs
frontend/: Cargo.toml  package-lock.json  package.json
frontend/src/: App.js  main.rs  resources.rs  scenes.rs
frontend/src/scenes/: backend_server_connections.rs
frontend/src/scenes/backend_server_connections/: backend_responses.rs
server_responses/: Cargo.toml
server_responses/src/: lib.rs
