[package]
name = "artbabo"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version = "0.14", default-features = false }
bevy_client_server_events = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bevy_eventwork = "0.9"
bevy_eventwork_mod_websockets = "0.2.0"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rand = "0.8"
server_responses = { path = "../server_responses" }

[profile.dev.package."*"]
opt-level = 2