[package]
name = "artbabo"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version = "0.15", default-features = false }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0"
bevy_eventwork = { version = "0.10", default-features = false }
bevy_eventwork_mod_websockets = "0.3.1"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rand = "0.8"
chrono = "0.4"
server_responses = { path = "../server_responses" }

[profile.dev.package."*"]
opt-level = 2