[package]
name = "artbabo"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rand = "0.8"
chrono = "0.4"
server_responses = { path = "../server_responses" }
event_work_server = { path = "../event_work_server" }
ws = { package = "rocket_ws", version = "0.1.1" }
rocket = "0.5.1"
log = "0.4"
env_logger = "0.11"
colored = "2"

[profile.dev.package."*"]
opt-level = 'z'