[package]
name = "event_work_server"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version = "0.15", default-features = false }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0"
bevy_eventwork = { version = "0.10", default-features = false }
bevy_eventwork_mod_websockets = "0.3.1"
tokio = { version = "1", features = ["full"] }
async-tungstenite = { version = "0.28.0", features = [
    "async-std-runtime",
    "url",
] }
url = "2.5.3"
async-std = { version = "1.12.0" }
bincode = "1.3.3"
futures-util = "0.3"
ws = { package = "rocket_ws", version = "0.1.1" }
rocket = "0.5.1"
async-channel = "2.3"
log = "0.4"