[package]
name = "artbabo_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14"
bevy_egui = { version="0.28", default-features = false, features=["default_fonts", "render"]}
serde = "1.0"
bevy_eventwork = { version = "0.9", default-features = false }
bevy_eventwork_mod_websockets = "0.2"
url = "2.5.3"
server_responses = { path = "../server_responses" }

[profile.dev.package."*"]
opt-level = 2